Estudo 01/Q8/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\juanp\Documents\Daves_Lista1\Q8
-d
C:\Users\juanp\Documents\Daves_Lista1\Q8\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java
<---- end of javadoc command ---->
Loading source file C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java...
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:26: error: illegal start of type
   if (altura > maiorAltura) {
   ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:26: error: <identifier> expected
   if (altura > maiorAltura) {
             ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:26: error: <identifier> expected
   if (altura > maiorAltura) {
                           ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:30: error: illegal start of type
            if (altura < menorAltura) {
            ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:30: error: > expected
            if (altura < menorAltura) {
                                    ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:34: error: illegal start of type
            if (sexo == 'F') {
            ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:34: error: <identifier> expected
            if (sexo == 'F') {
                    ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:41: error: illegal start of type
            } else {
              ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:47: error: class, interface, or enum expected
        double mediaAlturaMulheres = somaAlturaMulheres / numMulheres;
        ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:48: error: class, interface, or enum expected
        double porcentagemHomens = numHomens * 100.0 / numHabitantes;
        ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:49: error: class, interface, or enum expected
        double porcentagemMulheres = numMulheres * 100.0 / numHabitantes;
        ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:50: error: class, interface, or enum expected
        double porcentagemMulheres18a35VerdesLouros = numMulheres18a35VerdesLouros * 100.0 / numMulheres;
        ^
C:\Users\juanp\Documents\Daves_Lista1\Q8\Populacao.java:53: error: class, interface, or enum expected
}
^
13 errors
